--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "cumulative-delta-calculator",
   "version": "1.0.0",
   "description": "A tool to fetch trade histories and calculate the cumulative delta for a specific trading pair on an exchange.",
-  "main": "src/index.ts",
+  "main": "src/server.ts",
   "scripts": {
-    "start": "tsc && copyfiles -u 1 src/**/*.json dist && copyfiles -u 1 swagger.json dist && node dist/index.js",
+    "start": "tsc && copyfiles -u 1 src/**/*.json ./swagger.yaml dist && node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "build": "tsc && copyfiles -u 1 src/**/*.json dist",
+    "build": "tsc && copyfiles -u 1 src/**/*.json swagger.yaml dist",
     "test": "jest",
     "lint": "eslint . --ext .ts"
   },
@@ -26,11 +26,14 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "kucoin-node-sdk": "^1.0.5",
-    "swagger-ui-express": "^4.1.6"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^14.14.41",
+    "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "copyfiles": "^2.4.1",
