--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
     "yamljs": "^0.3.0"
   },
   "devDependencies": {
-    "@types/jest": "^26.0.23",
+    "@types/jest": "^26.0.24",
     "@types/node": "^14.14.41",
+    "@types/supertest": "^2.0.12",
     "@types/yamljs": "^0.2.31",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
@@ -41,6 +42,7 @@
     "eslint": "^7.25.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "supertest": "^6.3.3",
     "ts-jest": "^26.5.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.2.4"
